@@ -1,5 +1,7 @@
 = ActiveMerchant CHANGELOG
 
+* PayPal Express gateway: Add unstore support [duff]
+
 == Version 1.33.0 (May 30, 2013)
 
 * Netaxept: Completely revamped to use the "M" service type [rbjordan3, ntalbott]
